--- a/package.json
+++ b/package.json
@@ -23,6 +23,13 @@
     "npm-run-all": "^4.1.5",
     "optimist": "^0.6.1",
     "rimraf": "^2.6.1",
+    "rollup": "^1.1.2",
+    "rollup-plugin-amd": "^4.0.0",
+    "rollup-plugin-commonjs": "^9.2.0",
+    "rollup-plugin-json": "^3.1.0",
+    "rollup-plugin-node-resolve": "^4.0.0",
+    "rollup-plugin-typescript": "^1.0.0",
+    "rollup-plugin-uglify-es": "0.0.1",
     "source-map-loader": "^0.2.3",
     "style-loader": "^0.23.1",
     "ts-loader": "^5.3.2",
