Rollup min- finally working?

--- a/package.json
+++ b/package.json
@@ -1,15 +1,12 @@
 {
   "scripts": {
-    "build:src:dev": "webpack --config webpack.dev.js",
-    "build:src:prod": "webpack --config webpack.prod.js",
-    "build:src:size": "webpack --config webpack.size.js",
-    "test:build:src": "tsc --project test",
-    "test:build": "npm run test:clean && npm run test:build:src",
-    "test:serve": "npm run test:build && node ./test_lib/server.js",
-    "test:clean": "rimraf test_lib",
-    "test:server": "npm-run-all test:clean --parallel test:watch:build test:watch:server",
-    "test:watch:server": "nodemon './test_lib/server.js' --watch './test_lib'",
-    "rollup:dev": "./node_modules/rollup/bin/rollup -c rollup.dev.js"
+    "webpack:dev": "webpack --config webpack.dev.js",
+    "webpack:prod": "webpack --config webpack.prod.js",
+    "webpack:size": "webpack --config webpack.size.js",
+    "test:serve": "http-server . --p 9798",
+    "rollup": "npm run rollup:dev & npm run rollup:min",
+    "rollup:dev": "rollup -c rollup.dev.js",
+    "rollup:min": "rollup -c rollup.min.js"
   },
   "dependencies": {
     "@nteract/data-explorer": "^6.0.2",
@@ -18,25 +15,19 @@
     "react-table": "^6.9.0"
   },
   "devDependencies": {
-    "@types/node": "^10.12.21",
-    "@types/optimist": "0.0.29",
     "css-loader": "^2.1.0",
-    "nodemon": "^1.18.9",
+    "http-server": "^0.11.1",
     "npm-run-all": "^4.1.5",
-    "optimist": "^0.6.1",
     "rimraf": "^2.6.1",
     "rollup": "^1.1.2",
-    "rollup-plugin-amd": "^4.0.0",
     "rollup-plugin-commonjs": "^9.2.0",
-    "rollup-plugin-embed-css": "^0.4.0",
     "rollup-plugin-json": "^3.1.0",
     "rollup-plugin-node-builtins": "^2.1.2",
     "rollup-plugin-node-resolve": "^4.0.0",
     "rollup-plugin-postcss": "^2.0.3",
     "rollup-plugin-replace": "^2.1.0",
-    "rollup-plugin-typescript": "^1.0.0",
+    "rollup-plugin-terser": "^4.0.4",
     "rollup-plugin-typescript2": "^0.19.2",
-    "rollup-plugin-uglify-es": "0.0.1",
     "source-map-loader": "^0.2.3",
     "style-loader": "^0.23.1",
     "ts-loader": "^5.3.2",
