--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "test:watch:server": "nodemon './test_lib/server.js' --watch './test_lib'"
   },
   "dependencies": {
-    "@nteract/data-explorer": "^6.0.2",
-    "react": "^16.3.0",
+    "@nteract/data-explorer": "^7.1.5",
+    "react": "^16.3.2",
     "react-dom": "^16.0.0"
   },
   "devDependencies": {
@@ -24,6 +24,7 @@
     "optimist": "^0.6.1",
     "rimraf": "^2.6.1",
     "source-map-loader": "^0.2.3",
+    "styled-components": "^4.1.3",
     "style-loader": "^0.23.1",
     "ts-loader": "^5.3.2",
     "tslint": "^5.8.0",
